HW4 routing changes

--- a/hw3/public/index.html
+++ b/hw3/public/index.html
@@ -96,6 +96,11 @@
                 </span>
         </h3>
 
+        <!-- ORDERS FOR THE MONTH -->
+         <div id="monthlyOrderInfo">
+    
+         </div>
+
 
 
         <!-- HW2 JS/JQuery Script -->
